# doli-CSV

./: .build.yml  .gitignore  GIHUB.txt  LICENSE  MANIFEST.in  README.md  dolicsv.bat  dolicsv.py  pyproject.toml  setup.py  tox.ini
csv_doli/: __init__.py  core.py  dolicsv.py
tests/: test_core.py
