[tool.poetry]
name = "csv_doli"
version = "0.1.2"
description = "Un adaptateur simple CSV entre le SI bancaire et le plugin Compta Dolibear pour l'ARALA"
authors = ["Mathias Bazire <contact@sudri.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pewho/doli-CSV"

[tool.poetry.scripts]
csvdoli="csv_doli.core:main"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^4.2"
tox = "^3.7"
tox-pyenv = "^1.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
